[package]
name = "version_004"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.97"
bincode = "2.0.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
minifb = "0.27"
walkdir = "2.4"
cpal = "0.15"
rustfft = "6.2"
image = "0.25"